2009-06-17  Thomas M Hinkle  <tom@minime>

	* src/lib/keymanager.py (KeyManager.__init__): Initialize categories again.

2009-06-16  Thomas Hinkle  <tom@grenville>

	* src/lib/plugins/nutritional_information/nutritionDruid.py (NutritionInfoDruid.apply_custom):
	Fix custom information for fat.

2009-06-07  Thomas M Hinkle  <tom@minime>

	* src/lib/recipeManager.py (DatabaseShopper.init_orgdic): Use new
	initailize method of dbDic
	(DatabaseShopper.init_pantry): Use new initialize method of dbDic

	* src/lib/plugin_loader.py (MasterLoader.default_active_plugin_sets):
	Fix typo in list of plugins (missing comma).

	* src/lib/backends/db.py (dbDic.initialize): Add fast method for
	initializing a dbDic from defaults (faster than adding rows one at
	a time)

	* src/lib/keyEditor: Get rid of cruft (moved to plugin long ago)

	* src/lib/keymanager.py (KeyManager.__init__): Speed up
	initialization of keydic. Don't initialize each word in keydic
	from defaults (this should be part of the key editor plugin -- in
	our default mode, our users don't really care about keys (they
	always get the defaults) so we don't need to worry about setting
	up the DB for search (which is costly and makes first load seem
	unduly slow).

	* src/lib/version.py (version): Version->0.14.9

2009-06-04  Thomas M Hinkle  <tom@minime>

	* src/lib/plugin_loader.py (MasterLoader.default_active_plugin_sets):
	Add spellcheck to plugins that default to on.

	* src/lib/gtk_extras/TextBufferMarkup.py (PangoBuffer.get_text):
	Ignore tags that we didn't put there (such as those from
	gtkspell).

	* src/lib/plugins/spellcheck*: Add spellcheck plugin (adds
	automatic spell checking to all TextViews in recipe card editor.

	* src/lib/convert.py (NUM_AND_FRACTION_REGEXP): Fix typo for
	langauges without fraction support (ubuntu bug #352678)

	* test_deb.sh: Wipe out packages installed by python2.6 as well.

	* src/lib/reccard.py (RecCard.__init__): ++ get app if not handed
	GRM instance.
