@@ -873,7 +873,6 @@ ui = '''<ui>
   <menu name="Tools" action="Tools">
     <placeholder name="StandaloneTool">
     <menuitem action="Timer"/>
-    <menuitem action="FieldEditor"/>
     </placeholder>
     <separator/>
     <placeholder name="DataTool"/>
@@ -1072,12 +1071,6 @@ class RecGui (RecIndex, GourmetApplication, ImporterExporter, StuffThatShouldBeP
             ('Tools',None,_('_Tools')),
             ('Timer',None,_('_Timer'),
              None,_('Show timer'),lambda *args: show_timer()),
-            ('FieldEditor',None,_('_Field Editor'),
-             None,_('Edit values for any field across multiple recipes at a time'),
-             lambda *args: self.showValueEditor()
-             ),
-            #('UnitConverter',None,_('_Unit Converter'),
-            # None,_('Calculate unit conversions'),self.showConverter),
             ])
 
         
